--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<p>Вітаю! Мене звуть Анастасія. Я сертифікований майстер манікюру. За допомогою цього сайту Ви  можете ознайомитися з послугами та прикладами робіт, які я надаю. Буду рада, якщо Ви оберете мене, як свого майстра! </p>
 			<div class="button">
 				<a href="#" class="btn">Як справи ?</a>
-				<a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Дивись мої відео</a>
+				<a href="https://www.tiktok.com/@anlinoan/video/7173359050770386182?_r=1&_t=8Xu3lf7rfEM&is_from_webapp=v1&item_id=7173359050770386182" class="btn2"><span><i class='bx bx-play'></i></span>Дивись мої відео</a>
 			</div>
 		</div>
 	</section>
@@ -129,8 +129,8 @@
 			<div class="row">
 				<img src="img/nogot1.jpg">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
+					<h5></h5>
+					<p></p>
 					<a href="#"><i class='bx bx-link-external' ></i></a>
 				</div>
 			</div>
@@ -138,8 +138,8 @@
 			<div class="row">
 				<img src="img/nogot2.jpg">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
+					<h5></h5>
+					<p></p>
 					<a href="#"><i class='bx bx-link-external' ></i></a>
 				</div>
 			</div>
@@ -147,8 +147,8 @@
 			<div class="row">
 				<img src="img/nogot3.jpg">
 				<div class="layer">
-					<h5>Маникюр с покрытием</h5>
-					<p>Цена : 500 $.</p>
+					<h5></h5>
+					<p></p>
 					<a href="#"><i class='bx bx-link-external' ></i></a>
 				</div>
 			</div>
@@ -156,8 +156,8 @@
 			<div class="row">
 				<img src="img/nogot4.jpg">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
+					<h5></h5>
+					<p></p>
 					<a href="#"><i class='bx bx-link-external' ></i></a>
 				</div>
 			</div>
@@ -165,8 +165,8 @@
 			<div class="row">
 				<img src="img/nogot5.jpg">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
+					<h5></h5>
+					<p></p>
 					<a href="#"><i class='bx bx-link-external' ></i></a>
 				</div>
 			</div>
@@ -174,8 +174,8 @@
 			<div class="row">
 				<img src="img/nogot6.jpg">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
+					<h5></h5>
+					<p></p>
 					<a href="#"><i class='bx bx-link-external' ></i></a>
 				</div>
 			</div>
@@ -199,7 +199,7 @@
 				<a href="https://www.instagram.com/anlit_nails/?igshid=YmMyMTA2M2Y%3D"><i class='bx bxl-facebook' ></i></a>
 				<a href="https://www.instagram.com/anlit_nails/?igshid=YmMyMTA2M2Y%3D"><i class='bx bxl-twitter' ></i></a>
 				<a href="https://www.instagram.com/anlit_nails/?igshid=YmMyMTA2M2Y%3D"><i class='bx bxl-instagram-alt' ></i></a>
-				<a href="https://www.instagram.com/anlit_nails/?igshid=YmMyMTA2M2Y%3D"><i class='bx bxl-youtube' ></i></a>
+				<a href="https://www.tiktok.com/@anlinoan/video/7173359050770386182?_r=1&_t=8Xu3lf7rfEM&is_from_webapp=v1&item_id=7173359050770386182"><i class='bx bxl-youtube' ></i></a>
 			</div>
 		</div>
 
